Add lots of love to UI/UX

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -382,8 +382,8 @@ footer {
       position: relative;
       width: 100%;
       min-height: 100vh;
-      padding: 1.5rem 2.5rem calc(90px + 1.5rem);
-      margin-top: 65px; }
+      padding: 1 2.5rem calc(90px + 1.5rem);
+      margin-top: 30px; }
       .page-body .page-content-wrapper .page-content-wrapper-inner {
         max-width: 1140px;
         margin-left: auto;
