--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -198,6 +198,8 @@ body.embed {
     padding: 50px 0 0 0;
     display: flex;
     flex-direction: column;
+    word-wrap: break-word;
+    white-space: normal !important;
     text-align: center; }
     .sidebar .user-profile .user-name {
       font-weight: 600;
@@ -383,7 +385,7 @@ footer {
       width: 100%;
       min-height: 100vh;
       padding: 1 2.5rem calc(90px + 1.5rem);
-      margin-top: 30px; }
+      margin-top: 0; }
       .page-body .page-content-wrapper .page-content-wrapper-inner {
         max-width: 1140px;
         margin-left: auto;
